--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<p id="header">
+<div id="header">
     <h1>Memory Game</h1>
     <p>Try to pick the same three elements.</p>
     <p>To shuffle and start a new game, just reload the page.</p>
@@ -18,30 +18,30 @@
 
 
 <div id="board">
-    <table id="board_tbl">
-        <tr id="row1">
-            <td id="r1c1" class="td"><div id="card1" class="card"></div></td>
-            <td id="r1c2" class="td"><div id="card2" class="card"></div></td>
-            <td id="r1c3" class="td"><div id="card3" class="card"></div></td>
-        </tr>
-        <tr id="row2">
-            <td id="r2c1" class="td"><div id="card4" class="card"></div></td>
-            <td id="r2c2" class="td"><div id="card5" class="card"></div></td>
-            <td id="r2c3" class="td"><div id="card6" class="card"></div></td>
-        </tr>
-        <tr id="row3">
-            <td id="r3c1" class="td"><div id="card7" class="card"></div></td>
-            <td id="r3c2" class="td"><div id="card8" class="card"></div></td>
-            <td id="r3c3" class="td"><div id="card9" class="card"></div></td>
-        </tr>
-    </table>
+    <div id="board_tbl" class="table">
+        <div id="row1" class="row">
+            <div id="r1c1" class="cell"><div id="card1" class="card"></div></div>
+            <div id="r1c2" class="cell"><div id="card2" class="card"></div></div>
+            <div id="r1c3" class="cell"><div id="card3" class="card"></div></div>
+        </div>
+        <div id="row2" class="row">
+            <div id="r2c1" class="cell"><div id="card4" class="card"></div></div>
+            <div id="r2c2" class="cell"><div id="card5" class="card"></div></div>
+            <div id="r2c3" class="cell"><div id="card6" class="card"></div></div>
+        </div>
+        <div id="row3" class="row">
+            <div id="r3c1" class="cell"><div id="card7" class="card"></div></div>
+            <div id="r3c2" class="cell"><div id="card8" class="card"></div></div>
+            <div id="r3c3" class="cell"><div id="card9" class="card"></div></div>
+        </div>
+    </div>
 
 </div>
 <script type="text/javascript">
     $(shuffle_game_values());
     $(hide_all_cards());
     //$(play_sound());
-    $(console.log("And it does not block.."));
+
 </script>
 </body>
 </html>
