Make some optimations and get rid of some bugs in gamestep. -> wrong message. won instead of game over..

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Memory Game</h1>
     <p>Try to pick the same three elements.</p>
     <p>To shuffle and start a new game, just reload the page.</p>
+    <p><div id="search-value-box">&nbsp;</div></p>
 </div>
 
 
