Restructure project and add jss library to be able to change css on the fly.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Memory Game</title>
-    <link href="style.css" rel="stylesheet">
-    <script src="jQuery.js"></script>
-    <script src="memory_game.js"></script>
+    <script type="text/javascript" src="js/jss.js"></script>
+    <link href="css/style.css" rel="stylesheet">
+    <script src="js/jQuery.js"></script>
+    <script src="js/memory_game.js"></script>
 
 </head>
 <body>
@@ -39,10 +40,7 @@
 
 </div>
 <script type="text/javascript">
-    $(shuffle_game_values());
-    $(hide_all_cards());
-    //$(play_sound());
-
+    $(init_game());
 </script>
 </body>
 </html>
