made real memory game

--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 
 <div id="header">
     <h1>Memory Game</h1>
-    <p>Try to pick the same three elements.<br/>
+    <p>Try to find the same elements.<br/>
     To shuffle and start a new game, just press generate!</p>
-    <p>Number of card symbols: <input id="board_size" type="text" value="3"/>
-      Time to learn symbol positions: <input id="fadeout_duration" type="text" value="5"/> secs
       <input id="generate" type="button" value="Generate!"/></p>
-    <p><div id="search-value-box">&nbsp;</div></p>
 </div>
 
 
